--- a/templates/watercooler.html
+++ b/templates/watercooler.html
@@ -1,74 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <base href="/" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-</head>
-<body>
-
-    <main>
-      <div class="y-wrap">
-        <ul id="messages"></ul>
-        <form id="form" action="">
-          <input id="input" autocomplete="off" /><button>Send</button>
-        </form>
-      </div>
-    </main>
-
-
-
-
-  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-  <script>
-    var socket = io();
-
-    var messages = document.getElementById('messages');
-    var form = document.getElementById('form');
-    var input = document.getElementById('input');
-
-    const name = prompt("Hello Jobseeker! What is your name?")
-    appendMessage('Thanks for joining!');
-    socket.emit('new user', name)
-
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      if (input.value) {
-        socket.emit('chat message', input.value);
-        input.value = '';
-      }
-    });
-
-    socket.on('chat message', function (msg) {
-      var item = document.createElement('li');
-      item.textContent = msg;
-      messages.appendChild(item);
-      window.scrollTo(0, document.body.scrollHeight);
-    });
-
-    function appendMessage(message) {
-      const messageElement = document.createElement('div')
-      messageElement.innerText = message;
-      messages.append(messageElement)
-    }
- 
-  </script>
-</body>
-</html> -->
 
 <!DOCTYPE html>
 <html>
@@ -88,15 +17,25 @@
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
-    
-    <script src="/socket.io/socket.io.js"></script>
+    <main>
+
+      <ul id="messages"></ul>
+    </main>
+    <footer>
+
+      <form id="form" action="">
+        <input id="input" autocomplete="off" /><button type="submit">Send</button>
+      </form>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.min.js"></script>
     <script>
       var socket = io();
-    
+      
+      const name = prompt("Hello Jobseeker! What is your name?")
+      appendMessage('Thanks for joining ' + name);
+      socket.emit('new user', name)
+
       var form = document.getElementById('form');
       var input = document.getElementById('input');
     
@@ -110,10 +49,16 @@
     
       socket.on('chat message', function (msg) {
         var item = document.createElement('li');
-        item.textContent = msg;
+        item.textContent = name + ": " + msg;
         messages.appendChild(item);
         window.scrollTo(0, document.body.scrollHeight);
       });
+
+      function appendMessage(message) {
+        const messageElement = document.createElement('li')
+        messageElement.innerText = message;
+        messages.append(messageElement)
+      }
     </script>
   </body>
 </html>
